  ItemComboBoxModel, some refactoring
0.8.7
  EntityTableCellRenderer.BooleanRenderer bug fixed (from last refactoring), BooleanRenderer is now aligned in center
  EntityTableSearchModel.addSearchStateListener(), removeSearchStateListener() and isSearchEnabled() added
  DefaultEntityTableModel.getOrderByClause() added
  Sonar run
  Entity, redundant getFormattedValue() removed
  EntityImpl, bug fixed, setValue() set the primary key to null to early, before validation had been performed
  Configuration.SERVER_MONITOR_UPDATE_RATE added
  EntityApplicationPanel.getFrameTitle() signature change, now takes a EntityConnectionProvider parameter instead of User
  EntityTablePanel.getRefreshControl() and getClearControl() made public
0.8.8 [incompatible api: Property]
  Property.PrimaryKeyProperty removed
  Property.ColumnProperty, get/setPrimaryKeyIndex() and isPrimaryKeyProperty() added
0.8.9
  EntityCriteriaUtil, possible heap pollution due to generic vararg parameters fixed
  EntityImpl.KeyImpl no longer relies on Integer.MAX_VALUE to a represent null value
  EntityLookupModel.setToStringProvider() added
  DefaultEntityDefinition.checkForPrimaryKey() renamed to checkPrimaryKey(), now checks if the same index is used twice
  DefaultEntityEditModel, minor refactoring
  EntityCriteriaUtil, bugs fixed, methods overloaded with a "Collection values" parameter removed, all other methods now handle a Collection parameter
  EntityCriteriaUtil, bug fixed, ForeignKeyCriteria refactored
0.9.0
  DefaultEntityConnection no longer extends DefaultDatabaseConnection, composition used instead
  DefaultEntityConnection now synchronizes on it's internal connection instead of itself
  DatabaseConnection.Procedure and Function generified to accommodate the above inheritance change
  HostMonitor bug fixed, now removes admin server name prefix before checking if the server is already open
  Sonar run
  LoginPanel, refactored, static methods removed
  Sonar run, magic numbers