@@ -3769,3 +3769,4 @@
   Sonar run
   LoginPanel, refactored, static methods removed
   Sonar run, magic numbers
+  EntityConnectionServer, some refactoring
